--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
       <footer>
-        <p class="obrigado">Thanks Fallying 🤝</p>
+        <p class="obrigado">Rivaldo Mascarenhas Primo</p>
       </footer>
     </div>
 
